# altic

./: .gitignore  README.md  altic_notebook.ipynb  babel.cfg  config.yml  pyproject.toml  requirements.txt
altic/: constants.py  logging.py  main.py  prompt.py  utils.py
altic/commands/: __init__.py  build.py  deploy.py  install.py  new.py  rebuild.py  shell.py
altic/rpmspec/: lexer.py  parser.py  utils.py
locale/en_US/LC_MESSAGES/: messages.po
locale/ru_RU/LC_MESSAGES/: messages.po
templates/python3-module-template/: copier.yml
templates/python3-module-template/_conf/: metadata.yml
templates/rust-template/_conf/: architectures.yml  groups.yml  licenses.yml  metadata.yml
templates/rust-template/python3-module-{{package_slug}}/.gear/: rules
